--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ h3{
 
 #pro .card-footer{
   border: none;
-  background-color: white;
+  background-color:none;
 }
 
 .list-group .list-group-item{
@@ -318,11 +318,6 @@ svg{
   cursor: pointer;
 }
 
-#web .card{
-  height: 450px;
-}
-
-
 .social{
   border: none;
   display: block;
@@ -394,10 +389,6 @@ border-radius: 5%;
   height: auto;
 }
 
-#web #pro{
-  border: #2e0089 2px solid;
-}
-
 #pro h4{
  color:#361672;
 }
@@ -431,18 +422,11 @@ border-radius: 5%;
 #pro .card{
   width:50%;
   height: auto;
-  border: #2e0089 2px solid;
-}
-
-#web .img-thumbnail{
-  width: 100%;
-  height: 65%;
   border: none;
 }
 
-#web .card-body{
-  width:100%;
-  height:20px;
+#pro .pro__links button{
+  padding: 5px;
 }
 
 .btn:hover{
@@ -467,6 +451,46 @@ border-radius: 5%;
   font-size: large;
 } 
 
+#pro{
+  position: relative;
+
+}
+
+.pro_img{
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.card-content{
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(22, 2, 46, 0.852); 
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-content .card-body, .card-content .card-footer{
+  color: #ffffff;
+}
+
+#pro:hover .pro_img {
+  opacity: 0.3;
+}
+
+#pro:hover .card-content{
+  opacity: 1;
+}
+
  footer{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: rgb(255, 255, 255); 
@@ -481,8 +505,13 @@ border-radius: 5%;
     justify-content: space-around;
 }
 
-.uiux #pro{
-  border: #2e0089 2px solid;
+.uiux #pro, .web #pro{
+  border: none;
+}
+
+.web .img-thumbnail{
+  width: 100%;
+  height: auto;
 }
 
 #projects a,#services a{
@@ -497,13 +526,13 @@ border-radius: 5%;
   text-decoration: underline;
 }
 
-#projects #web .card-footer button, .uiux #pro .card-footer button{
+.web #pro .card-footer button, .uiux #pro .card-footer button{
   width: 50px;
   height: 50px;
   text-align: center;
 }
 
-#projects #web{
+#projects .web{
   border: none;
 }
 
