--- a/style.css
+++ b/style.css
@@ -1,145 +1,158 @@
-body{
+body {
   width: 100%;
   margin: 0%;
 }
-.navbar-brand{
+.navbar-brand {
   color: #ffffff;
   font-size: 25px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
 }
 
-section{
+section {
   height: auto;
   width: 100%;
 }
 
-.navlogo{
+.navlogo {
   color: #ffffff;
-  font-size:25px;
+  font-size: 25px;
   font-family: "Caveat", cursive;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
 }
 
-.head_img{
+.head_img {
   width: 100%;
   height: 45%;
 }
 
-.hp{
+.hp {
   text-decoration: none;
 }
 
-.navbar-brand:hover{
+.navbar-brand:hover {
   color: #ffffff;
 }
 
 .navbar {
-    background-color: #1F0C46;
-  }
+  background-color: #1f0c46;
+}
 
- .navbar .navbar-nav .nav-link{
-    color: #ffffff;
-    background-color: #1F0C46;
-    font-size:18px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
-  }
+.navbar .navbar-nav .nav-link {
+  color: #ffffff;
+  background-color: #1f0c46;
+  font-size: 18px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+}
 
-  .navbar .navbar-nav .nav-pills .nav-link .active{
-    color: #ffffff;
-  }
+.navbar .navbar-nav .nav-pills .nav-link .active {
+  color: #ffffff;
+}
 
-  .navbar .navbar-nav .nav-link:hover{
-    text-decoration: underline;
-  }
+.navbar .navbar-nav .nav-link:hover {
+  text-decoration: underline;
+}
 
-  .navbar-toggler:active{
-    border: none;
-  }
+.navbar-toggler:active {
+  border: none;
+}
 
-#but a{
+#but a {
   font-family: "Courier Prime", monospace;
   font-weight: 400;
 }
 
-.gh{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.gh {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   border: none;
   background-color: #1f0c46;
   color: #ffffff;
   border: #ffffff 2px solid;
 }
- 
-.gh a{
+
+.gh a {
   color: #ffffff;
   text-decoration: none;
 }
 
-.gh:hover{
+.gh:hover {
   background-color: #2e0089;
   color: #ffffff;
 }
 
-  #lt{
-    border: #ffffff 2px solid;
-    font-size:18px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
+#lt {
+  border: #ffffff 2px solid;
+  font-size: 18px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 
-  #lt a{
-    color: #ffffff;
-    text-decoration: none;
-    font-size:18px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
+#lt a {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 
-  #lt a:hover,#lt a:active{
-    background-color: #2e0089;
-    color: #ffffff;
-    text-decoration: none;
-  }
-  
-  #about h2, #skills h2, #contact h2{
-    color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: 400;
-    margin-left:  50px;
-    padding-top: 10px;
-    font-size: xx-large;
-  }
-  
-#education h2, #projects h2{
+#lt a:hover,
+#lt a:active {
+  background-color: #2e0089;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+#about h2,
+#skills h2,
+#contact h2 {
+  color: #ffffff;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: 400;
+  margin-left: 50px;
+  padding-top: 10px;
+  font-size: xx-large;
+}
+
+#education h2,
+#projects h2 {
   color: #1f0c46;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-weight: 400;
   margin-left: 50px;
   font-size: xx-large;
 }
 
-#ser,#exp,#hl{
+#ser,
+#exp,
+#hl {
   border: #2e0089 2px solid;
   border-radius: 0%;
 }
 
-#highlights h2, #experience h2, #services h2{
+#highlights h2,
+#experience h2,
+#services h2 {
   color: #10012c;
 }
 
-#edu{
+#edu {
   border: #2e0089 2px solid;
   height: 150px;
   border-radius: 0%;
 }
 
-#cer{
-  border:none;
+#cer {
+  border: none;
 }
 
-#home{
+#home {
   background: url("imgs/tech\ girl\ background.jpeg");
   background-size: cover;
   background-position: center;
@@ -147,20 +160,20 @@ section{
   position: relative;
 }
 
-.hero__section{
+.hero__section {
   position: absolute;
-  top:55%;
+  top: 55%;
   left: 30%;
   color: white;
 }
 
-.hero__section_title{
+.hero__section_title {
   font-family: "Yanone Kaffeesatz", serif;
   text-align: center;
   font-size: 5vw;
 }
 
-.hero__section_button{
+.hero__section_button {
   font-family: "Yanone Kaffeesatz", serif;
   text-align: center;
   background-color: black;
@@ -170,10 +183,10 @@ section{
   width: 40%;
 }
 
-.hero__section_button:hover{
+.hero__section_button:hover {
   font-family: "Yanone Kaffeesatz", serif;
   text-align: center;
-  font-size:medium;
+  font-size: medium;
   background-color: rgba(0, 0, 0, 0.889);
   border: none;
   padding: 10px;
@@ -181,83 +194,92 @@ section{
   width: 40%;
 }
 
-.hero__section_button a{
+.hero__section_button a {
   text-decoration: none;
   color: #ffffff;
 }
 
-#edu:hover, #ser:hover,#exp:hover{
+#edu:hover,
+#ser:hover,
+#exp:hover {
   background-color: #2e0089;
   color: #ffffff;
 }
 
-h3{
+h3 {
   color: #1f0c46;
   font-family: "Courier Prime", monospace;
   font-weight: 400;
   text-align: center;
 }
 
-#exp .card-body{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+#exp .card-body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-#pro .card-footer{
+#pro .card-footer {
   border: none;
-  background-color:none;
+  background-color: none;
 }
 
-.list-group .list-group-item{
+.list-group .list-group-item {
   background-color: white;
 }
 
-.list-group .list-group-item:hover{
+.list-group .list-group-item:hover {
   background-color: #2e0089;
   color: #ffffff;
 }
 
-.list-group-item{
+.list-group-item {
   border: #2e0089 2px solid;
 }
 
-.main{
+.main {
   margin-top: 75px;
 }
 
-#services, #projects,#certificates{
+#services,
+#projects,
+#certificates {
   background-color: #ffffff;
   color: #1f0c46;
 }
 
-#about, #skills, #contact, #hightlights{
+#about,
+#skills,
+#contact,
+#hightlights {
   color: #ffffff;
   background-color: #1f0c46;
   height: auto;
   width: 100%;
 }
 
-textarea, input{
-  border:none;
+textarea,
+input {
+  border: none;
   border-radius: 5px;
   height: 50px;
   padding: 10px;
   justify-content: space-between;
 }
 
-
-#skills a{
+#skills a {
   color: #ffffff;
   text-decoration: none;
-  font-size:18px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 18px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-#skills a:hover{
+#skills a:hover {
   color: #ffffff;
   text-decoration: underline;
 }
 
-#ab{
+#ab {
   max-width: 800px;
   display: flex;
   justify-content: center;
@@ -267,7 +289,7 @@ textarea, input{
   background-color: #1f0c46;
 }
 
-#send{
+#send {
   float: right;
   background-color: #dcd7e0;
   color: #1f0c46;
@@ -279,7 +301,7 @@ textarea, input{
   font-family: "Courier Prime", monospace;
 }
 
-#send:hover{
+#send:hover {
   float: right;
   background-color: #9d9d9d;
   color: #1f0c46;
@@ -290,122 +312,124 @@ textarea, input{
   cursor: pointer;
 }
 
-#con{
+#con {
   color: rgb(255, 255, 255);
   text-align: left;
   font-size: larger;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
 }
 
-.table td{
-  background-color: #1F0C46;
+.table td {
+  background-color: #1f0c46;
   border: none;
 }
 
-.table{
- margin-left: 25px;
- margin-right: 25px;
+.table {
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
-#con span{
+#con span {
   color: rgb(255, 255, 255);
   text-align: left;
   font-size: large;
 }
 
-svg{
+svg {
   width: 75px;
   height: 75px;
   cursor: pointer;
 }
 
-.social{
+.social {
   border: none;
   display: block;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
 }
 
-
-#mydetail{
-  border: none;  
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: rgb(255, 255, 255); 
-  background-color: #1f0c46; 
+#mydetail {
+  border: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(255, 255, 255);
+  background-color: #1f0c46;
 }
 
-#sl{
+#sl {
   text-decoration: none;
   color: rgb(255, 255, 255);
 }
-.list-group-item{
-  background-color: #1F0C46;
+.list-group-item {
+  background-color: #1f0c46;
 }
 
-#profile_pic{
+#profile_pic {
   height: 500px;
 }
 
-#cer{
+#cer {
   cursor: pointer;
 }
 
-.modal .modal-header{
+.modal .modal-header {
   border: none;
 }
 
-address{
+address {
   color: beige;
   text-align: left;
   font-size: larger;
 }
 
-.btn{
-    background-color: #1F0C46;
-    color: whitesmoke;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;   
+.btn {
+  background-color: #1f0c46;
+  color: whitesmoke;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
 }
 
-#exp{
+#exp {
   background: none;
 }
 
-.back{
+.back {
   background-color: #1f0c46;
   color: #ffffff;
   border: none;
-height: auto;
-border-radius: 5%;
+  height: auto;
+  border-radius: 5%;
 }
 
-.card-img-top{
+.card-img-top {
   border-radius: 0px;
 }
 
-#pro{
-  border:#2e0089 2px solid;
+#pro {
+  border: #2e0089 2px solid;
   border-radius: 0%;
   height: auto;
 }
 
-#pro h4{
- color:#361672;
+#pro h4 {
+  color: #361672;
 }
 
-#pro p{
+#pro p {
   font-size: 18px;
   text-align: left;
 }
 
-#pro h5{
+#pro h5 {
   font-size: 20px;
-  text-align:left;
+  text-align: left;
 }
 
-#pro button{
+#pro button {
   background-color: #1f0c46;
   color: whitesmoke;
   width: 100%;
@@ -413,7 +437,7 @@ border-radius: 5%;
   border: none;
 }
 
-#pro button:hover{
+#pro button:hover {
   background-color: #2e0089;
   color: whitesmoke;
   width: 100%;
@@ -421,17 +445,17 @@ border-radius: 5%;
   border: none;
 }
 
-#pro .card{
-  width:50%;
+#pro .card {
+  width: 50%;
   height: auto;
   border: none;
 }
 
-#pro .pro__links button{
+#pro .pro__links button {
   padding: 5px;
 }
 
-.btn:hover{
+.btn:hover {
   background-color: #2e0089;
   color: whitesmoke;
   text-decoration: none;
@@ -439,41 +463,42 @@ border-radius: 5%;
   border-radius: 5px;
 }
 
-.card-text{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.card-text {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   color: black;
   font-size: x-large;
   text-align: justify;
-} 
-
-.card-title .fst-italic{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 400;
-  font-size: large;
-} 
-
-#pro{
-  position: relative;
-
 }
 
-.pro_img{
+.card-title .fst-italic {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: large;
+}
+
+#pro {
+  position: relative;
+}
+
+.pro_img {
   opacity: 1;
   display: block;
-  transition: .5s ease;
+  transition: 0.5s ease;
   backface-visibility: hidden;
 }
 
-.card-content{
-  transition: .5s ease;
+.card-content {
+  transition: 0.5s ease;
   opacity: 0;
   position: absolute;
-  top: 0; 
-  left: 0; 
-  width: 100%; 
-  height: 100%; 
-  background-color: rgba(22, 2, 46, 0.852); 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(22, 2, 46, 0.852);
   text-align: center;
   display: flex;
   flex-wrap: wrap;
@@ -481,7 +506,8 @@ border-radius: 5%;
   justify-content: center;
 }
 
-.card-content .card-body, .card-content .card-footer{
+.card-content .card-body,
+.card-content .card-footer {
   color: #ffffff;
 }
 
@@ -489,34 +515,38 @@ border-radius: 5%;
   opacity: 0.3;
 }
 
-#pro:hover .card-content{
+#pro:hover .card-content {
   opacity: 1;
 }
 
- footer{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: rgb(255, 255, 255); 
+footer {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: rgb(255, 255, 255);
   color: #1f0c46;
   height: 50px;
   padding-top: 10px;
- }
-
-#but, .pro__links{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
 }
 
-.uiux #pro, .web #pro{
+#but,
+.pro__links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.uiux #pro,
+.web #pro {
   border: none;
 }
 
-.web .img-thumbnail{
+.web .img-thumbnail {
   width: 100%;
   height: auto;
 }
 
-#projects a,#education a{
+#projects a,
+#education a {
   text-decoration: none;
   text-align: center;
   color: #1f0c46;
@@ -524,142 +554,137 @@ border-radius: 5%;
   font-weight: 400;
 }
 
-#projects a:hover,#education a:hover{
+#projects a:hover,
+#education a:hover {
   text-decoration: underline;
 }
 
-.web #pro .card-footer button, .uiux #pro .card-footer button{
+.web #pro .card-footer button,
+.uiux #pro .card-footer button {
   width: 50px;
   height: 50px;
   text-align: center;
 }
 
-#projects .web{
+#projects .web {
   border: none;
 }
 
-.img-thumbnail{
+.img-thumbnail {
   border: none;
 }
 
-.bi{
+.bi {
   font-size: 1.5rem;
 }
 
-@media screen and (max-width:375px){
-   
-    .navbar .navbar-toggler{
-        border: none;
-        color: #ffffff;
-      }
-
-      .navbar .navbar-toggler-icon{
-        border: none;
-        color: #ffffff;
-      }
-  
-      .navbar .navbar-toggler:active{
-        border: none;
-      }
-
-      .navbar .navbar-toggler-icon .fa{
-        border: none;
-       }
-      
-      #profile_pic{
-        height: 200px;
-      }
-
-    #but, .pro__links{
-        display: block;
-        justify-content: center;
-        padding-top: 5px;
-    }
-
-    .hero__section{
-      position: absolute;
-      top:50%;
-      left: 10%;
-    }
-    
-    .hero__section_title{
-      font-family: "Yanone Kaffeesatz", serif;
-      text-align: center;
-      font-size: 15vw;
-    }    
-
+@media screen and (max-width: 375px) {
+  .navbar .navbar-toggler {
+    border: none;
+    color: #ffffff;
   }
 
-  @media screen and (max-width:600px){
-    #profile_pic{
-      height: 200px;
-    }
-
-    .hero__section{
-      position: absolute;
-      top:50%;
-      left: 10%;
-    }
-    
-    .hero__section_title{
-      font-family: "Yanone Kaffeesatz", serif;
-      text-align: center;
-      font-size: 10vw;
-    }
-    
+  .navbar .navbar-toggler-icon {
+    border: none;
+    color: #ffffff;
   }
 
-  @media screen and (max-width: 1024px) {
-    .navbar-nav .nav-item {
-      padding: 0 0.5rem;
-    }
-
-    #profile_pic{
-      height: 500px;
-    }
-    
-    .hero__section{
-      position: absolute;
-      top:60%;
-      left: 30%;
-    }
-    
-    .hero__section_title{
-      font-family: "Yanone Kaffeesatz", serif;
-      text-align: center;
-      font-size: 5vw;
-    }
-    
+  .navbar .navbar-toggler:active {
+    border: none;
   }
 
-  @media screen and (max-width: 768px){
-    .hero__section{
-      position: absolute;
-      top:50%;
-      left: 25%;
-    }
-
-    
-    .hero__section_title{
-      font-family: "Yanone Kaffeesatz", serif;
-      text-align: center;
-      font-size: 5vw;
-    }
-    
+  .navbar .navbar-toggler-icon .fa {
+    border: none;
   }
 
-  @media screen and (max-width: 425px){
-    .hero__section{
-      position: absolute;
-      top:60%;
-      left: 5%;
-    }
-    
-    .hero__section_title{
-      font-family: "Yanone Kaffeesatz", serif;
-      text-align: center;
-      font-size: 10vw;
-    }
-
-
+  #profile_pic {
+    height: 200px;
   }
+
+  #but,
+  .pro__links {
+    display: block;
+    justify-content: center;
+    padding-top: 5px;
+  }
+
+  .hero__section {
+    position: absolute;
+    top: 50%;
+    left: 10%;
+  }
+
+  .hero__section_title {
+    font-family: "Yanone Kaffeesatz", serif;
+    text-align: center;
+    font-size: 15vw;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #profile_pic {
+    height: 200px;
+  }
+
+  .hero__section {
+    position: absolute;
+    top: 50%;
+    left: 10%;
+  }
+
+  .hero__section_title {
+    font-family: "Yanone Kaffeesatz", serif;
+    text-align: center;
+    font-size: 10vw;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .navbar-nav .nav-item {
+    padding: 0 0.5rem;
+  }
+
+  #profile_pic {
+    height: 500px;
+  }
+
+  .hero__section {
+    position: absolute;
+    top: 60%;
+    left: 30%;
+  }
+
+  .hero__section_title {
+    font-family: "Yanone Kaffeesatz", serif;
+    text-align: center;
+    font-size: 5vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__section {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+  }
+
+  .hero__section_title {
+    font-family: "Yanone Kaffeesatz", serif;
+    text-align: center;
+    font-size: 5vw;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .hero__section {
+    position: absolute;
+    top: 60%;
+    left: 5%;
+  }
+
+  .hero__section_title {
+    font-family: "Yanone Kaffeesatz", serif;
+    text-align: center;
+    font-size: 10vw;
+  }
+}
