--- a/style.css
+++ b/style.css
@@ -524,8 +524,8 @@ footer {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: rgb(255, 255, 255);
   color: #1f0c46;
-  height: 50px;
-  padding-top: 10px;
+  height: auto;
+  padding: 10px;
 }
 
 #but,
