--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ section {
 
 #edu {
   border: #2e0089 2px solid;
-  height: 150px;
+  height: auto;
   border-radius: 0%;
 }
 
@@ -320,6 +320,30 @@ input {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
+}
+
+.dropdown-menu{
+  background-color: #1f0c46;
+  color: #ffffff;
+  text-decoration: none;
+  border: none;
+}
+
+.dropdown-menu:hover{
+  background-color: #1f0c46;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.dropdown-menu .dropdown-item{
+  background-color: #1f0c46;
+  color: #ffffff;
+}
+
+.dropdown-menu .dropdown-item:hover{
+  background-color: #1f0c46;
+  color: #ffffff;
+  text-decoration: underline;
 }
 
 .table td {
